--- a/style.css
+++ b/style.css
@@ -4,36 +4,33 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
+  background-color: #000;
 }
 
 #canvas-container {
   width: 90%;
   max-width: 1200px;
-  aspect-ratio: 1.78/1;
-/*   width: 720px;
-  height: 480px; */
-  background: url("./img/5.Fondo/Capas/5.cielo_1920-1080px.png");
+  aspect-ratio: 16/9;
+  background: url('./img/5.Fondo/Capas/5.cielo_1920-1080px.png');
   background-size: cover;
   background-position: left;
 }
 
 canvas {
-  /* background: #000; */
   width: 100%;
   height: 100%;
 }
 
-@media screen and (min-aspect-ratio: 1.78 / 1) {
+@media screen and (min-aspect-ratio: 16/9) {
   #canvas-container {
     height: 90vh;
     width: unset;
   }
 }
 
-@media screen and (max-height: 400px) {
+@media screen and (max-height: 500px) {
   #canvas-container {
     height: 100vh;
-    width: 100%;
-    aspect-ratio: auto;
+    width: unset;
   }
 }
