--- a/style.css
+++ b/style.css
@@ -4,7 +4,15 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
-  background-color: #000;
+  /* background-color: #000; */
+  background: rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.d-none {
+  display: none;
 }
 
 #canvas-container {
@@ -23,27 +31,84 @@ canvas {
   display: block;
 }
 
-#startscreen{
+#startscreen {
+  background-image: url('./img/9.Intro _ Outro Image/Start Screen/Opcion 1.png');
+  background-size: cover;
   width: 100%;
   height: 100%;
   position: absolute;
+  transition: all 300ms ease-in-out;
 }
 
-button{
-  padding: 1rem 1.5rem;
+.hide-startscreen{
+  transform: scale(0);
+  opacity: 0;
+}
+
+#button-container {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0;
+}
+
+button {
+  padding: 0.5rem 1.2rem;
   border-radius: 10px;
+  font-variant: small-caps;
+  font-family: 'Alegreya Sans', sans-serif;
+  font-size: clamp(.8rem, 2vw, 1.5rem);
+  color: #a0220a;
+  border: none;
+  background: linear-gradient(#ffc322 10%, #ffd900 30%, #ffd900 70%, #ffc322 90%);
+  cursor: pointer;
+  box-shadow: 1px 1px 2px 2px #a0220a;
 }
 
-@media screen and (min-aspect-ratio: 16/9) {
+button:hover {
+  background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.3)),
+    linear-gradient(#ffc322 10%, #ffd900 30%, #ffd900 70%, #ffc322 90%);
+  color: #a72e16;
+}
+
+.btns--decent{
+  background: rgba(0, 0, 0, 0.5);
+}
+
+
+@media (max-width: 900px){
+  #canvas-container{
+    width: 100%;
+  }
+  button{
+    padding: 0.4rem 1rem;
+  }
+}
+
+
+@media (min-aspect-ratio: 16/9) {
   #canvas-container {
-    height: 90vh;
+    height: calc(100vh - 50px);
     width: unset;
   }
 }
 
-@media screen and (max-height: 500px) {
-  #canvas-container {
-    height: 100vh;
-    width: unset;
+@media (max-aspect-ratio: 16/9) {
+  #button-container {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
+
+@media (max-height: 500px) {
+  #canvas-container{
+    height: calc(100vh - 35px);
+  }
+  #button-container{
+    padding: 5px 0;
+  }
+  button{
+    padding: .3rem .5rem;
+    font-size: .8rem;
   }
 }
