--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-*{
+* {
   font-family: 'Alegreya Sans', sans-serif;
+  margin: 0;
 }
 
 body {
@@ -7,41 +8,41 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  margin: 0;
   /* background-color: #000; */
   background: rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 
 .d-none {
   display: none;
 }
 
-.standard-font{
+.standard-font {
   font-family: sans-serif;
 }
 
-h1{
+h1 {
   text-align: center;
-  margin-top: 40px;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
 }
 
-h2{
+h2 {
   font-size: 1.7rem;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
-p{
-  font-size: 1.2rem;
-  margin: .6rem 0;
-  letter-spacing: .08rem;
+p {
+  font-size: 1.3rem;
+  margin: 0.6rem 0;
+  letter-spacing: 0.08rem;
 }
 
 #canvas-container {
-  width: 90%;
+  width: 100%;
   max-width: 1200px;
   aspect-ratio: 16/9;
+  max-height: 674px;
   background: url('./img/5.Fondo/Capas/5.cielo_1920-1080px.png');
   background-size: cover;
   background-position: left;
@@ -60,54 +61,76 @@ canvas {
   width: 100%;
   height: 100%;
   position: absolute;
-  transition: all 300ms ease-in-out;
+  transition: all 500ms ease-in-out;
 }
 
-.hide-startscreen{
+.hide-startscreen {
   transform: scale(0);
   opacity: 0;
+  /* transform: scale(130%);
+  animation: hide-startstcreen 2000ms ease-in-out forwards;*/
+}
+
+@keyframes hide-startstcreen {
+  0%{
+    transform: scale(100%);
+    opacity: 1;
+  }
+  30%{
+    transform: scale(130%);
+  }
+  100%{
+    transform: scale(0);
+    opacity: 0;
+  }
 }
 
 #button-container {
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
-  padding: 10px 0;
+  align-items: center;
+  padding: 0 10px;
 }
 
 button {
-  padding: 0.5rem 1.2rem;
+  padding: 0.4rem 1.2rem;
+  font-size: 0.7rem;
   border-radius: 10px;
   font-variant: small-caps;
-  font-size: clamp(.8rem, 2vw, 1.5rem);
-  color: #a0220a;
+  font-size: clamp(0.6rem, 1.8vw, 1.5rem);
+  color: #ffd900;
   border: none;
-  background: linear-gradient(#ffc322 10%, #ffd900 30%, #ffd900 70%, #ffc322 90%);
+  /* background: linear-gradient(#ffc322 10%, #ffd900 30%, #ffd900 70%, #ffc322 90%); */
+  background-color: transparent;
   cursor: pointer;
   box-shadow: 1px 1px 2px 2px #a0220a;
 }
 
 button:hover {
   background: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)),
-  linear-gradient(#ffc322 10%, #ffd900 30%, #ffd900 70%, #ffc322 90%);
+    linear-gradient(#ffc322 10%, #ffd900 30%, #ffd900 70%, #ffc322 90%);
+  background: linear-gradient(#ffc322 10%, #ffd900 30%, #ffd900 70%, #ffc322 90%);
   color: #a72e16;
 }
 
-button:disabled{
-  background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),
-  linear-gradient(#ffc322 10%, #ffd900 30%, #ffd900 70%, #ffc322 90%);
+button:disabled {
+  background: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3));
   color: #b86352;
   box-shadow: 1px 1px 2px 2px #b86352;
   cursor: default;
 }
 
-.btns--decent{
+.btns--decent {
   background: rgba(0, 0, 0, 0.5);
 }
 
 /* -------------  HELP - MODAL  -------------- */
 
-#help-modal{
+#help-modal {
   box-sizing: border-box;
   position: absolute;
   inset: 0;
@@ -117,7 +140,7 @@ button:disabled{
   overflow-y: auto;
 }
 
-#close-help{
+#close-help {
   background: none;
   width: 30px;
   height: 30px;
@@ -129,55 +152,43 @@ button:disabled{
   padding: 2px;
 }
 
-#close-help:hover{
+#close-help:hover {
   background: rgba(0, 0, 0, 0.1);
 }
 
-#close-help img{
+#close-help img {
   width: 100%;
   object-fit: contain;
 }
 
-#keys-table td{
+#keys-table td {
   padding: 5px;
-  font-size: 1.2rem;
-  letter-spacing: .08rem;
+  font-size: 1.3rem;
+  letter-spacing: 0.08rem;
 }
 
+/* -------------  MEDIA QUERIES  --------------- */
 
-@media (max-width: 900px){
-  #canvas-container{
-    width: 100%;
+
+@media (max-width: 700px), (max-height: 450px)  {
+  button{
+    padding: 0.3rem 0.5rem;
+  }
+}
+
+@media (max-width: 500px), (max-height: 350px) {
+  #button-container{
+    padding: 0 5px;
+    bottom: 5px;
   }
   button{
-    padding: 0.4rem 1rem;
+    padding: 0.15rem 0.25rem;
   }
 }
-
 
 @media (min-aspect-ratio: 16/9) {
-  #canvas-container {
-    height: calc(100vh - 50px);
-    width: unset;
-  }
-}
-
-@media (max-aspect-ratio: 16/9) {
-  #button-container {
-    padding-left: 5px;
-    padding-right: 5px;
-  }
-}
-
-@media (max-height: 500px) {
   #canvas-container{
-    height: calc(100vh - 35px);
-  }
-  #button-container{
-    padding: 5px 0;
-  }
-  button{
-    padding: .3rem .5rem;
-    font-size: .8rem;
+  height: 100vh;
+  width: unset;
   }
 }
