--- a/style.css
+++ b/style.css
@@ -55,13 +55,21 @@ canvas {
   display: block;
 }
 
-#startscreen {
-  background-image: url('./img/9.Intro _ Outro Image/Start Screen/Opcion 1.png');
+.screen {
   background-size: cover;
-  width: 100%;
-  height: 100%;
+  inset: 0;
   position: absolute;
   transition: all 500ms ease-in-out;
+}
+
+#startscreen{
+  background-image: url('./img/9.Intro _ Outro Image/Start Screen/Opcion 1.png');
+}
+#lostscreen{
+  background-image: url('./img/9.Intro _ Outro Image/_Game over_ screen/2.oh no you lost!.png');
+}
+#wonscreen{
+  background-image: url('./img/9.Intro _ Outro Image/_Game over_ screen/you won.png');
 }
 
 .hide-startscreen {
@@ -85,6 +93,8 @@ canvas {
   }
 }
 
+/* ----------  BUTTONS  ----------- */
+
 #button-container {
   position: absolute;
   bottom: 10px;
@@ -104,15 +114,22 @@ button {
   font-size: clamp(0.6rem, 1.8vw, 1.5rem);
   color: #ffd900;
   border: none;
-  /* background: linear-gradient(#ffc322 10%, #ffd900 30%, #ffd900 70%, #ffc322 90%); */
   background-color: transparent;
   cursor: pointer;
   box-shadow: 1px 1px 2px 2px #a0220a;
 }
 
-button:hover {
+.button--foreground{
+  background: linear-gradient(#ffc322 10%, #ffd900 30%, #ffd900 70%, #ffc322 90%);
+  color: #a0220a;
+}
+
+.button--foreground:hover{
   background: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)),
-    linear-gradient(#ffc322 10%, #ffd900 30%, #ffd900 70%, #ffc322 90%);
+  linear-gradient(#ffc322 10%, #ffd900 30%, #ffd900 70%, #ffc322 90%);
+}
+
+button:hover {
   background: linear-gradient(#ffc322 10%, #ffd900 30%, #ffd900 70%, #ffc322 90%);
   color: #a72e16;
 }
@@ -122,10 +139,6 @@ button:disabled {
   color: #b86352;
   box-shadow: 1px 1px 2px 2px #b86352;
   cursor: default;
-}
-
-.btns--decent {
-  background: rgba(0, 0, 0, 0.5);
 }
 
 /* -------------  HELP - MODAL  -------------- */
