--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ p {
   background-size: cover;
   background-position: left;
   position: relative;
+  overflow: hidden;
 }
 
 canvas {
@@ -130,6 +131,20 @@ button:disabled:hover {
   color: #b86352;
 }
 
+.animated-btn{
+  animation: btn-animation 650ms ease-in-out infinite alternate;
+}
+
+@keyframes btn-animation{
+  0%{
+    box-shadow: 1px 1px 2px 2px rgba(255, 195, 34, 0.8);
+  }
+  100%{
+    box-shadow: 0px 0px 40px 20px rgba(255, 195, 34, 0.8);
+
+  }
+}
+
 /* -------------  HELP - MODAL  -------------- */
 
 #help-modal {
@@ -176,6 +191,20 @@ button:disabled:hover {
   button{
     padding: 0.3rem 0.5rem;
   }
+
+  .animated-btn{
+    animation: btn-animation700 650ms ease-in-out infinite alternate;
+  }
+
+  @keyframes btn-animation700{
+    0%{
+      box-shadow: 1px 1px 2px 2px rgba(255, 195, 34, 0.8);
+    }
+    100%{
+      box-shadow: 0px 0px 20px 10px rgba(255, 195, 34, 0.8);
+  
+    }
+  }
 }
 
 @media (max-width: 500px), (max-height: 350px) {
@@ -185,6 +214,19 @@ button:disabled:hover {
   }
   button{
     padding: 0.15rem 0.25rem;
+  }
+  .animated-btn{
+    animation: btn-animation500 650ms ease-in-out infinite alternate;
+  }
+
+  @keyframes btn-animation500{
+    0%{
+      box-shadow: 1px 1px 2px 2px rgba(255, 195, 34, 0.8);
+    }
+    100%{
+      box-shadow: 0px 0px 15px 7px rgba(255, 195, 34, 0.8);
+  
+    }
   }
 }
 
