--- a/style.css
+++ b/style.css
@@ -56,6 +56,8 @@ canvas {
   display: block;
 }
 
+/* -----------  SCREENS  ------------ */
+
 .screen {
   background-size: cover;
   inset: 0;
@@ -79,6 +81,39 @@ canvas {
 .hide-startscreen {
   transform: scale(0);
   opacity: 0;
+}
+
+/* ----------  LOADING  ----------- */
+
+#loading-screen{
+}
+
+#loading-bar{
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 30%;
+  aspect-ratio: 10;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 20px;
+  /* border: 1px solid rgb(160, 34, 10, .2) ; */
+  overflow: hidden;
+}
+
+#status{
+  height: 100%;
+  background: radial-gradient(circle at 50% 50%,rgba(255, 255, 255, 0.5) 10%, transparent 40%);
+  animation: loading-animation 1s linear infinite;
+}
+
+@keyframes loading-animation {
+  0%{
+    transform: translateX(-70%);
+  }
+  100%{
+    transform: translateX(70%);
+  }
 }
 
 /* ----------  BUTTONS  ----------- */
