--- a/style.css
+++ b/style.css
@@ -184,6 +184,24 @@ button:disabled:hover {
   }
 }
 
+#bottle-btn{
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  visibility: hidden;
+}
+
+#bottle-btn__img{
+  height: 100%;
+  width: auto;
+  transform: rotateZ(15deg);
+}
+
 /* -------------  HELP - MODAL  -------------- */
 
 #help-modal {
@@ -242,6 +260,10 @@ button:disabled:hover {
       box-shadow: 0px 0px 20px 10px rgba(255, 195, 34, 0.8);
     }
   }
+
+  #bottle-btn{
+    display: unset;
+  }
 }
 
 @media (max-width: 500px), (max-height: 350px) {
@@ -263,6 +285,11 @@ button:disabled:hover {
     100% {
       box-shadow: 0px 0px 15px 7px rgba(255, 195, 34, 0.8);
     }
+  }
+
+  #bottle-btn{
+    width: 30px;
+    height: 30px;
   }
 }
 
